@@ -592,6 +592,7 @@ struct aloopStruct {
 	unsigned do_garbage_collect : 1;
 	unsigned ircd_booted : 1;
 	unsigned do_bancheck : 1;
+	unsigned tainted : 1;
 };
 
 typedef struct Whowas {
