@@ -110,17 +110,15 @@ char *unrealcredits[] =
 	"BlueFlame^",
 	" - the first UnrealIRCd donation :)",
 	"[Real] from ChatFIRST.com",
-	" - donation to UnrealIRCd project :)",
+	" - donations to UnrealIRCd project :)",
 	"Jameno123 & ByteHosting Internet Services",
 	"- Hardware donations (diskspace!)",
-	"Anonymos",
-	"- Shell donation for tspre.org",
 	"Interlink Access Corp",
 	" - donation to the UnrealIRCd development",
 	"Jan Knutar (JK@IRC)",
 	" - RAM donation, Shell donations :D, and a hell lot of other stuff",
 	"ThePlayer",
-	" - Donation to re-buy tspre.org",
+	" - Donation to re-buy tspre.org and other needed donations",
 	"Thanks to Headbang and WonderWal too for hardware+software",
 	"donations",
 	"powerstorm.net",
