@@ -1402,3 +1402,4 @@ seen. gmtime warning still there
 - Made ./configure check if it has parameters, and error if it don't.
 - Made ./configure remove uscore.c and uscore binary after test
 - Removed mutex.c
+- Credits changes, various tweaks mzp ftq Gzdqmx qhqdk dqxqmeq oapq otmxxqzsq. Tmbbk tgzfuzs.
